# SeleniumbaseAgent

./: .env.example  .mcp.json  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml  setup.sh
docs/superpowers/plans/: 2026-04-15-seleniumbase-mcp.md
docs/superpowers/specs/: 2026-04-15-seleniumbase-mcp-design.md
src/mcp_server/: proxy.py  server.py  session.py
src/mcp_server/tools/: captcha.py  extraction.py  interaction.py  lifecycle.py  navigation.py
tests/: conftest.py  test_captcha.py  test_extraction.py  test_interaction.py  test_lifecycle.py  test_navigation.py  test_proxy.py  test_session.py
