[project]
name = "seleniumbase-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "seleniumbase>=4.29",
    "mcp>=1.0",
    "starlette",
    "uvicorn[standard]",
    "html2text",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "anyio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
